--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@angular/material": "^8.1.3",
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
+    "@angular/pwa": "^0.803.0",
     "@angular/router": "~8.2.0",
+    "@angular/service-worker": "~8.2.0",
     "hammerjs": "^2.0.8",
+    "lite-server": "^2.5.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
